--- a/scss/_learn.scss
+++ b/scss/_learn.scss
@@ -198,6 +198,9 @@
             img{
                 transform: scale(.9);
             }
+            img:hover{
+                transform: scale(1);
+            }
            }
            .rightcont{
             margin-top: 380px;
@@ -237,6 +240,9 @@
                     transform: scale(.8);
                     
                 }
+                img:hover{
+                    transform: scale(.9);
+                }
             }
             .rightcont{
                
@@ -268,6 +274,9 @@
                 margin: 0px;
                 img{
                     transform: scale(.7);
+                }
+                img:hover{
+                    transform: scale(.8);
                 }
             }
 
@@ -344,6 +353,9 @@
                 img{
                     transform: scale(.6);
                 }
+                img:hover{
+                    transform: scale(.7);
+                }
 
             }
             .rightcont{
@@ -407,6 +419,9 @@
                     transform: scale(.8);
                     
                 }
+                img:hover{
+                    transform: scale(.9);
+                }
             }
             .leftcont1{
                 margin-top: 10px;
@@ -449,6 +464,9 @@
                 margin: 0px;
                 img{
                     transform: scale(.7);
+                }
+                img:hover{
+                    transform: scale(.8);
                 }
             }
 
@@ -517,6 +535,9 @@
                 img{
                     transform: scale(.6);
                 }
+                img:hover{
+                    transform: scale(.7);
+                }
 
             }
             .leftcont1{
@@ -540,6 +561,9 @@
 
                 img{
                     transform: scale(.9);
+                }
+                img:hover{
+                    transform: scale(1);
                 }
 
             }
@@ -584,6 +608,9 @@
                     transform: scale(.8);
                     
                 }
+                img:hover{
+                    transform: scale(.9);
+                }
             }
             .rightcont2{
                
@@ -618,6 +645,9 @@
                 margin: 0px;
                 img{
                     transform: scale(.7);
+                }
+                img:hover{
+                    transform: scale(.8);
                 }
             }
 
@@ -683,6 +713,9 @@
             .leftcont2{
                 img{
                     transform: scale(.6);
+                }
+                img:hover{
+                    transform: scale(.7);
                 }
 
             }
@@ -750,6 +783,9 @@
                     transform: scale(.8);
                     
                 }
+                img:hover{
+                    transform: scale(.9);
+                }
             }
             .leftcont3{
                 margin-top: 10px;
@@ -791,6 +827,9 @@
                 margin: 0px;
                 img{
                     transform: scale(.7);
+                }
+                img:hover{
+                    transform: scale(.8);
                 }
             }
 
@@ -858,6 +897,9 @@
             .rightcont3{
                 img{
                     transform: scale(.6);
+                }
+                img:hover{
+                    transform: scale(.7);
                 }
 
             }
